--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "tailwind": "npx tailwindcss -i ./src/tailwind.css -o ./stories/styles/tailwind.css --watch",
     "storybook": "storybook dev -p 6006",
     "predeploy": "npm run build-storybook",
     "deploy-storybook": "gh-pages -d storybook-static",
-    "build-storybook": "storybook build"
+    "build-storybook": "tailwind && storybook build"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.0.25"
+    "storybook": "^7.0.25",
+    "tailwindcss": "^3.3.2"
   }
 }
